# RuminationsOnCpp

./: RuminationsOnCppWorkSpace.code-workspace  cfg.cmake
Proj000_CharPicture/: CMakeLists.txt
Proj000_CharPicture/include/: PicNode.h  Picture.h
Proj000_CharPicture/src/: PicNode.cpp  Picture.cpp
Proj000_CharPicture/test/: main.cpp
